Shortening masthead, aligning so bottom of image is always fixed to the bottom.

--- a/app/app.css
+++ b/app/app.css
@@ -26,10 +26,10 @@ body {
 
   background-color: #eee;
   background-image: url(img/bg.jpg);
-  background-position: 0% 100%;
+  background-position: 100% 100%;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 95vh;
+  height: 85vh;
   -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 
